--- a/buy-it-now.html
+++ b/buy-it-now.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=8">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=9">
     </head>
 
     <body>
@@ -405,7 +405,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -458,7 +458,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -511,7 +511,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -564,7 +564,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -617,7 +617,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -670,7 +670,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -723,7 +723,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -776,7 +776,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -829,7 +829,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -1079,7 +1079,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=8"></script>
+        <script src="./assets/js/custom.js?v=9"></script>
     </body>
 
 </html>
