--- a/car-details-smartexchange.html
+++ b/car-details-smartexchange.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=8">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=9">
     </head>
 
     <body class="car-details">
@@ -1127,6 +1127,64 @@
                 </div>
             </div>
         </div>
+        <div class="modal fade gallery-modal" id="gallerySliderModal" tabindex="-1"
+            aria-labelledby="gallerySliderModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-body p-xl-0 p-3">
+                        <div class="cd-sliders">
+                            <div class="details-slider-for-2 dsf">
+                                <div class="dsf-img-cont">
+                                    <video src="./assets/vid/sample.mp4" controls preload="meta"></video>
+                                    <div class="dsf-content d-flex flex-column align-items-center text-white">
+                                        <span class="dsf-label">Interior</span>
+                                        <span class="dsf-title">Front seat</span>
+                                    </div>
+                                </div>
+                                <div class="dsf-img-cont">
+                                    <img src="./assets/img/slider-2.png" alt="Image 2">
+                                    <div class="dsf-content d-flex flex-column align-items-center text-white">
+                                        <span class="dsf-label">Exterior</span>
+                                        <span class="dsf-title">Trunk</span>
+                                    </div>
+                                </div>
+                                <div class="dsf-img-cont">
+                                    <img src="./assets/img/slider-3.png" alt="Image 3">
+                                    <div class="dsf-content d-flex flex-column align-items-center text-white">
+                                        <span class="dsf-label">Engine</span>
+                                        <span class="dsf-title">Bonet</span>
+                                    </div>
+                                </div>
+                                <div class="dsf-img-cont">
+                                    <img src="./assets/img/car-details-thumb.png" alt="Image 4">
+                                    <div class="dsf-content d-flex flex-column align-items-center text-white">
+                                        <span class="dsf-label">Roof</span>
+                                        <span class="dsf-title">Car Roof</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="details-slider-nav-2 dsn mb-3 pb-1">
+                                <div class="dsn-img-cont"><img src="./assets/img/slider-1.png" alt="Thumbnail 1">
+                                </div>
+                                <div class="dsn-img-cont"><img src="./assets/img/slider-2.png" alt="Thumbnail 2">
+                                </div>
+                                <div class="dsn-img-cont"><img src="./assets/img/slider-3.png" alt="Thumbnail 3">
+                                </div>
+                                <div class="dsn-img-cont"><img src="./assets/img/car-details-thumb.png"
+                                        alt="Thumbnail 4"></div>
+                            </div>
+                            <div id="custom-arrows-container" class="gallery-arrows">
+                                <div class="ga-prev"></div>
+                                <p class="mb-0">
+                                    <span class="ga-current">01 </span><span class="ga-total">/ 05</span>
+                                </p>
+                                <div class="ga-next"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Vehicle Details Modals End -->
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
         <script src="./assets/js/bootstrap.bundle.min.js"></script>
@@ -1134,7 +1192,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=8"></script>
+        <script src="./assets/js/custom.js?v=9"></script>
     </body>
 
 </html>
