--- a/favourites.html
+++ b/favourites.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=8">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=9">
     </head>
 
     <body>
@@ -410,7 +410,7 @@
                                                 <span>Wholesale</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -448,7 +448,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -506,7 +506,7 @@
                                                 <span>Quick Sale</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -546,7 +546,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -589,7 +589,7 @@
                                                 <span>Quick Sale</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -629,7 +629,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -667,7 +667,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -722,7 +722,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -762,7 +762,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -997,7 +997,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=8"></script>
+        <script src="./assets/js/custom.js?v=9"></script>
     </body>
 
 </html>
