--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=8">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=9">
     </head>
 
     <body class="homepage">
@@ -228,8 +228,8 @@
                         <div class="col-lg-6 text-center d-flex flex-column justify-content-center">
                             <div class="home-sec-4-imgs position-relative">
                                 <div class="hs-4-mobile" data-aos="fade-up" data-aos-duration="800">
-                                    <iframe src="./live-sale.html" frameborder="0" class="hs-4-iframe"></iframe>
-                                    <img src="./assets/img/iPhone-14-Pro-frame.png" alt="Mobile" class="hs-4-frame">
+                                    <!-- <iframe src="./live-sale.html" frameborder="0" class="hs-4-iframe"></iframe> -->
+                                    <img src="./assets/img/carsmart-homepage.png" alt="Mobile" class="hs-4-frame">
                                 </div>
                                 <div class="hh-tooltip hht-6">
                                     <img src="./assets/img/hh-tooltip-6.svg" alt="Tooltips" class="w-100">
@@ -354,7 +354,7 @@
                                         <span>Quick Sale</span>
                                     </div>
                                     <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                    <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                    <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                     <div class="grade-badge-cont">
                                         <span class="gb-text">Grade A</span>
                                         <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -392,7 +392,7 @@
                                         <span>Private</span>
                                     </div>
                                     <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                    <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                    <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                     <div class="grade-badge-cont">
                                         <span class="gb-text">Grade A</span>
                                         <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -450,7 +450,7 @@
                                         <span>Wholesale</span>
                                     </div>
                                     <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                    <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                    <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                     <div class="grade-badge-cont">
                                         <span class="gb-text">Grade A</span>
                                         <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -490,7 +490,7 @@
                                         <span>Private</span>
                                     </div>
                                     <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                    <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                    <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                     <div class="grade-badge-cont">
                                         <span class="gb-text">Grade A</span>
                                         <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -774,7 +774,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=8"></script>
+        <script src="./assets/js/custom.js?v=9"></script>
     </body>
 
 </html>
