--- a/our-policy.html
+++ b/our-policy.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=8">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=9">
     </head>
 
     <body>
@@ -136,31 +136,31 @@
                                 procedures to safeguard both yourself and the seller. </p>
                             <h5 class="fw-semibold mb-0 mt-2 policy-title">Steps to Follow if Additional Damage is
                                 Discovered at Collection: </h5>
-                            <ol class="policy-desc">
-                                <li>Discuss the Issue with the Seller: If you find any discrepancies or damage that
+                            <ol class="policy-desc d-flex flex-column gap-4">
+                                <li class="ps-2">Discuss the Issue with the Seller: If you find any discrepancies or damage that
                                     wasn't noted in the original listing, immediately inform the seller and try to
                                     negotiate a price adjustment. If a revised price cannot be agreed upon, cancellation
                                     of the sale may be necessary. </li>
-                                <li>Submit the Required Documentation: Whether you're adjusting the price or canceling
+                                <li class="ps-2">Submit the Required Documentation: Whether you're adjusting the price or canceling
                                     the sale, you must fill out our Price Adjustment and Cancellation form within 24
                                     hours of the collection. </li>
-                                <li>Provide Visual Proof: Ensure that you attach clear photographic evidence of any
+                                <li class="ps-2">Provide Visual Proof: Ensure that you attach clear photographic evidence of any
                                     additional damage or discrepancies that weren't captured in the initial vehicle
                                     listing. </li>
-                                <li>Accurate Invoicing: Once you submit the form, we will review the details and adjust
+                                <li class="ps-2">Accurate Invoicing: Once you submit the form, we will review the details and adjust
                                     your invoice accordingly. </li>
-                                <li>Consequences of Non-Compliance: Please be aware that failing to provide the
+                                <li class="ps-2">Consequences of Non-Compliance: Please be aware that failing to provide the
                                     necessary documentation for price changes or cancellations could lead to a temporary
                                     suspension of your account. This includes a freeze on your bidding privileges until
                                     the issue is investigated and resolved. We enforce this policy to maintain the
                                     integrity and trustworthiness of our platform. Additional Important Points: </li>
-                                <li>Keep Communication Records: Always document any discussions with the seller
+                                <li class="ps-2">Keep Communication Records: Always document any discussions with the seller
                                     regarding discrepancies. Written communication can be valuable if disputes arise
                                     later. </li>
-                                <li>Inspect Before You Accept: Whenever possible, conduct a thorough inspection of the
+                                <li class="ps-2">Inspect Before You Accept: Whenever possible, conduct a thorough inspection of the
                                     vehicle before finalizing the collection. This proactive approach can prevent
                                     complications down the line. </li>
-                                <li>Reach Out for Assistance: If you encounter challenges during collection, don't
+                                <li class="ps-2">Reach Out for Assistance: If you encounter challenges during collection, don't
                                     hesitate to contact our Sales Support Team. They are available to guide you through
                                     the process and help resolve any issues promptly. </li>
                             </ol>
@@ -357,7 +357,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=8"></script>
+        <script src="./assets/js/custom.js?v=9"></script>
     </body>
 
 </html>
