--- a/smart-connect.html
+++ b/smart-connect.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=8">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=9">
     </head>
 
     <body>
@@ -410,7 +410,7 @@
                                                 <span>Quick Sale</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -453,7 +453,7 @@
                                                 <span>Quick Sale</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -493,7 +493,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -536,7 +536,7 @@
                                                 <span>Wholesale</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -579,7 +579,7 @@
                                                 <span>Quick Sale</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -619,7 +619,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -659,7 +659,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -702,7 +702,7 @@
                                                 <span>Wholesale</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -742,7 +742,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -977,7 +977,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=8"></script>
+        <script src="./assets/js/custom.js?v=9"></script>
     </body>
 
 </html>
