--- a/live-sale.html
+++ b/live-sale.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=8">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=9">
     </head>
 
     <body>
@@ -405,7 +405,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -443,7 +443,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -490,7 +490,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -528,7 +528,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -575,7 +575,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -613,7 +613,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -660,7 +660,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -698,7 +698,7 @@
                                                 <span>Private</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -745,7 +745,7 @@
                                                 <span>SmartConnect</span>
                                             </div>
                                             <img src="./assets/img/product-img-5.png" alt="Product" class="plc-img">
-                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon">
+                                            <img src="./assets/img/not-favourite.svg" alt="C" class="like-unlike-icon" onclick="likeVehicle(event)">
                                             <div class="grade-badge-cont">
                                                 <span class="gb-text">Grade A</span>
                                                 <img src="./assets/img/grade-badge.svg" alt="Grade Badge"
@@ -980,7 +980,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=8"></script>
+        <script src="./assets/js/custom.js?v=9"></script>
     </body>
 
 </html>
