--- a/pages.html
+++ b/pages.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=8">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=9">
     </head>
 
     <body>
@@ -44,15 +44,26 @@
                 <li><a href="./our-policy.html" class="text-white">Dashboard Outbid</a></li>
                 <li><a href="./prices-vioded-form-confirmation.html" class="text-white">Prices and Voided form confirmation</a></li>
                 <li><a href="./our-policy.html" class="text-white">Our Policy</a></li>
-                <li><a href="./car-details-private-buy-it-now.html" class="text-info">Vehicle details private buy it now</a></li>
-                <li><a href="./car-details-buy-it-now.html" class="text-info">Vehicle details buy it now</a></li>
-                <li><a href="./car-details-private-live-sale.html" class="text-info">Vehicle details private live sale</a></li>
-                <li><a href="./car-details-live-sale.html" class="text-info">Vehicle details live sale</a></li>
-                <li><a href="./car-details-private-quick-sale.html" class="text-info">Vehicle details private quick sale</a></li>
-                <li><a href="./car-details-quick-sale.html" class="text-info">Vehicle details quick sale</a></li>
-                <li><a href="./car-details-smartconnect-sale.html" class="text-info">Vehicle details smartconnect sale</a></li>
-                <li><a href="./car-details-wholesale.html" class="text-info">Vehicle details wholesale</a></li>
-                <li><a href="./car-details-smartexchange.html" class="text-info">Vehicle details smartexchange</a></li>
+                <li><a href="./car-details-private-buy-it-now.html" class="text-white">Vehicle details private buy it now</a></li>
+                <li><a href="./car-details-buy-it-now.html" class="text-white">Vehicle details buy it now</a></li>
+                <li><a href="./car-details-private-live-sale.html" class="text-white">Vehicle details private live sale</a></li>
+                <li><a href="./car-details-live-sale.html" class="text-white">Vehicle details live sale</a></li>
+                <li><a href="./car-details-private-quick-sale.html" class="text-white">Vehicle details private quick sale</a></li>
+                <li><a href="./car-details-quick-sale.html" class="text-white">Vehicle details quick sale</a></li>
+                <li><a href="./car-details-smartconnect-sale.html" class="text-white">Vehicle details smartconnect sale</a></li>
+                <li><a href="./car-details-wholesale.html" class="text-white">Vehicle details wholesale</a></li>
+                <li><a href="./car-details-smartexchange.html" class="text-white">Vehicle details smartexchange</a></li>
+                <li class="list-unstyled"><a class="text-parrot text-center">------ 23-Nov-2024 ------</a></li>
+                <li><a href="./dashboard-offered.html" class="text-info">Dashboard SmartExchange offered</a></li>
+                <li><a href="./dashboard-received.html" class="text-info">Dashboard SmartExchange received</a></li>
+                <li><a href="./dashboard-listings.html" class="text-info">Dashboard vehicle listings</a></li>
+                <li><a href="./dashboard-closed-purchases.html" class="text-info">Dashboard vehicles closed purchases</a></li>
+                <li><a href="./dashboard-voided-sales.html" class="text-info">Dashboard vehicles voided sales</a></li>
+                <li><a href="./dashboard-quotes.html" class="text-info">Dashboard Smart drop quotes</a></li>
+                <li><a href="./dashboard-accepted.html" class="text-info">Dashboard Smart drop accepted</a></li>
+                <li><a href="./live-sale-notice.html" class="text-info">Live Sale Notice</a></li>
+                <li><a href="./smarthub-fees.html" class="text-info">SmartHub Fees</a></li>
+                <li><a href="./changes-and-voided-sales.html" class="text-info">Changes and voided sales form</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
@@ -61,7 +72,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=8"></script>
+        <script src="./assets/js/custom.js?v=9"></script>
     </body>
 
 </html>
